--- a/go-angular-auth/frontend/frontend1/angular.json
+++ b/go-angular-auth/frontend/frontend1/angular.json
@@ -27,9 +27,7 @@
               "src/styles.css",
               "node_modules/ngx-toastr/toastr.css"
             ],
-            "scripts": [
-              "node_modules/bootstrap/dist/js/bootstrap.min.js"
-            ]
+            "scripts": []
           },
           "configurations": {
             "production": {
